fix dark mode text message

--- a/frontend/src/darkMode.css
+++ b/frontend/src/darkMode.css
@@ -130,3 +130,7 @@
   background-color: #666;
   color: #fff;
 }
+
+.chat-msg {
+  color: black;
+}
